[gd_scene load_steps=12 format=3 uid="uid://cfvv7x84qgvlj"]

[ext_resource type="Script" path="res://Scenes/Game/HUD/Main/hud.gd" id="1_kg5u5"]
[ext_resource type="Script" path="res://Scenes/Tests/TestScene/Inventory.gd" id="2_s3pb2"]
[ext_resource type="PackedScene" uid="uid://2w6y6v1ibjxi" path="res://Scenes/Tests/Slot/slot.tscn" id="3_j28ob"]
[ext_resource type="PackedScene" uid="uid://b0x2emaaeusk" path="res://Scenes/Game/HUD/Store/store.tscn" id="4_7xrsr"]
[ext_resource type="Texture2D" uid="uid://pojghji23m58" path="res://Assets/Other/Parchment.png" id="5_cqnup"]

[sub_resource type="Animation" id="Animation_h7dlr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OrderNote:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(30, 1026)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HandsTab:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(785, 1026)]
}

[sub_resource type="Animation" id="Animation_b4r8f"]
resource_name = "order_go_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OrderNote:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(30, 866), Vector2(30, 1026)]
}

[sub_resource type="Animation" id="Animation_umhoq"]
resource_name = "order_go_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OrderNote:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(30, 1026), Vector2(30, 866)]
}

[sub_resource type="Animation" id="Animation_iu2eh"]
resource_name = "hands_go_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HandsTab:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(785, 1026), Vector2(785, 866)]
}

[sub_resource type="Animation" id="Animation_n2bcw"]
resource_name = "hands_go_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HandsTab:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(785, 866), Vector2(785, 1026)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vyxgj"]
_data = {
"RESET": SubResource("Animation_h7dlr"),
"hands_go_down": SubResource("Animation_n2bcw"),
"hands_go_up": SubResource("Animation_iu2eh"),
"order_go_down": SubResource("Animation_b4r8f"),
"order_go_up": SubResource("Animation_umhoq")
}

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kg5u5")

[node name="CoinLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -190.0
offset_top = 32.0
offset_right = -40.0
offset_bottom = 92.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "Coins: 0"
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -192.0
offset_top = 94.0
offset_right = -42.0
offset_bottom = 154.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "Time:"
vertical_alignment = 1

[node name="HandsTab" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 785.0
offset_top = -54.0
offset_right = 1135.0
offset_bottom = 162.0
grow_vertical = 0
color = Color(0.73303, 0.444622, 0.194185, 1)

[node name="Detail" type="ColorRect" parent="HandsTab"]
layout_mode = 0
offset_right = 350.0
offset_bottom = 55.0
mouse_filter = 2
color = Color(0.582191, 0.343159, 0.136624, 1)

[node name="Label" type="Label" parent="HandsTab/Detail"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "HOLDING"

[node name="Hands" type="GridContainer" parent="HandsTab"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -170.0
offset_top = -130.0
offset_right = 170.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/h_separation = 20
columns = 3
script = ExtResource("2_s3pb2")

[node name="Slot" parent="HandsTab/Hands" instance=ExtResource("3_j28ob")]
layout_mode = 2
mouse_filter = 1

[node name="Slot2" parent="HandsTab/Hands" instance=ExtResource("3_j28ob")]
layout_mode = 2
mouse_filter = 1

[node name="Slot3" parent="HandsTab/Hands" instance=ExtResource("3_j28ob")]
layout_mode = 2
mouse_filter = 1

[node name="Store" parent="." instance=ExtResource("4_7xrsr")]
visible = false
layout_mode = 1

[node name="PayLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 347.0
offset_top = 795.0
offset_right = 610.0
offset_bottom = 837.0
theme_override_font_sizes/font_size = 30
text = "I canÂ´t afford that"

[node name="OrderNote" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -54.0
offset_right = 380.0
offset_bottom = 162.0
grow_vertical = 0
color = Color(0.73303, 0.444622, 0.194185, 1)

[node name="OrderLabel" type="Label" parent="OrderNote"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = 3.0
offset_right = 39.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "None"

[node name="Detail" type="ColorRect" parent="OrderNote"]
layout_mode = 0
offset_right = 350.0
offset_bottom = 55.0
mouse_filter = 2
color = Color(0.582191, 0.343159, 0.136624, 1)

[node name="Label" type="Label" parent="OrderNote/Detail"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "NOTE"

[node name="DayTimer" type="Timer" parent="."]
wait_time = 300.0
one_shot = true

[node name="Helper" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.504934, 0.504934)
texture = ExtResource("5_cqnup")
centered = false

[node name="HelperLabel" type="Label" parent="Helper"]
offset_left = 65.0
offset_top = 230.0
offset_right = 535.0
offset_bottom = 710.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Click to raise fire and boil liquid

NOTE: The fire goes out with time"
horizontal_alignment = 1
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vyxgj")
}

[connection signal="new_day" from="." to="Store" method="set_prices"]
[connection signal="mouse_entered" from="HandsTab" to="." method="_show_HUD_piece" binds= ["hands"]]
[connection signal="mouse_exited" from="HandsTab" to="." method="_hide_HUD_piece" binds= ["hands"]]
[connection signal="send" from="Store" to="." method="buy_stuff"]
[connection signal="mouse_entered" from="OrderNote" to="." method="_show_HUD_piece" binds= ["order"]]
[connection signal="mouse_exited" from="OrderNote" to="." method="_hide_HUD_piece" binds= ["order"]]
[connection signal="timeout" from="DayTimer" to="." method="_on_day_timer_timeout"]
